Iteration 10 Summary   What was accomplished:   1. Created jai-toml git submodule - Added toml-c (https://github.com/arp242/toml-c) as a git submodule at   modules/jai-toml/toml-c   2. Created Jai FFI bindings (modules/jai-toml/module.jai):     - Complete FFI bindings for all toml-c C functions     - Jai-friendly helper functions: parse(), get_string(), get_int(), get_bool(), get_double(), get_table(),   get_array(), etc.     - Proper memory management with free_table()   3. Created generate.jai - Build script to compile the toml-c shared library   4. Built libtoml.so - Compiled C library ready for linking   5. Added 13 comprehensive TOML tests (tests/unit/test_toml.jai):     - parse_simple - Basic parsing     - parse_string_values - String handling     - parse_integer_values - Integer types     - parse_boolean_values - Boolean parsing     - parse_float_values - Float/double values     - parse_nested_tables - [section] and [section.subsection]     - parse_array_of_strings - String arrays     - parse_array_of_integers - Integer arrays     - parse_array_of_tables - [[array.of.tables]]     - parse_error_handling - Invalid TOML detection     - table_enumeration - Key iteration     - missing_keys - Missing key handling     - config_file_example - Full daemon config structure test
  Test Results: All 225 tests pass (212 previous + 13 new TOML tests)

jai-toml-c

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "modules/jason"]
 	path = modules/jason
 	url = https://github.com/rluba/jason.git
+[submodule "modules/jai-toml/toml-c"]
+	path = modules/jai-toml/toml-c
+	url = https://github.com/arp242/toml-c.git
+[submodule "modules/jai-toml-c"]
+	path = modules/jai-toml-c
+	url = git@github.com:uncrumpled2/jai-toml-c.git
