rename to uncrumpled-context-switcher

--- a/deploy/macos/com.uncrumpled-context-switcher.daemon.plist
+++ b/deploy/macos/com.uncrumpled-context-switcher.daemon.plist
@@ -4,12 +4,12 @@
 <dict>
     <!-- Service identifier -->
     <key>Label</key>
-    <string>com.uncrumpled.daemon</string>
+    <string>com.uncrumpled-context-switcher.daemon</string>
 
     <!-- Program to run -->
     <key>ProgramArguments</key>
     <array>
-        <string>__INSTALL_DIR__/uncrumpled-daemon</string>
+        <string>__INSTALL_DIR__/uncrumpled-context-switcher-daemon</string>
         <string>--daemon</string>
     </array>
 
@@ -38,9 +38,9 @@
 
     <!-- Standard output/error logging -->
     <key>StandardOutPath</key>
-    <string>__HOME_DIR__/Library/Logs/uncrumpled/daemon.log</string>
+    <string>__HOME_DIR__/Library/Logs/uncrumpled-context-switcher/daemon.log</string>
     <key>StandardErrorPath</key>
-    <string>__HOME_DIR__/Library/Logs/uncrumpled/daemon.error.log</string>
+    <string>__HOME_DIR__/Library/Logs/uncrumpled-context-switcher/daemon.error.log</string>
 
     <!-- Environment variables -->
     <key>EnvironmentVariables</key>
