--- a/deploy/linux/uncrumpled-context-switcher-socket.service
+++ b/deploy/linux/uncrumpled-context-switcher-socket.service
@@ -1,26 +1,26 @@
 # Uncrumpled Context Switcher - Socket-Activated Service
 #
 # This service variant is started via socket activation.
-# The systemd socket unit (uncrumpled.socket) passes the socket FD.
+# The systemd socket unit (uncrumpled-context-switcher.socket) passes the socket FD.
 #
-# See uncrumpled.socket for installation instructions.
+# See uncrumpled-context-switcher.socket for installation instructions.
 
 [Unit]
 Description=Uncrumpled Context Switcher Daemon (Socket Activated)
-Documentation=https://github.com/uncrumpled/context-switcher
-Requires=uncrumpled.socket
-After=uncrumpled.socket
+Documentation=https://github.com/uncrumpled/uncrumpled-context-switcher
+Requires=uncrumpled-context-switcher.socket
+After=uncrumpled-context-switcher.socket
 
 [Service]
 Type=simple
-ExecStart=%h/.local/bin/uncrumpled-daemon --foreground --systemd-socket
+ExecStart=%h/.local/bin/uncrumpled-context-switcher-daemon --foreground --systemd-socket
 ExecReload=/bin/kill -HUP $MAINPID
 
 # Accept socket from systemd
 StandardInput=socket
 
 # Use runtime directory from socket unit
-RuntimeDirectory=uncrumpled
+RuntimeDirectory=uncrumpled-context-switcher
 RuntimeDirectoryMode=0700
 
 # Resource limits
@@ -35,7 +35,7 @@ PrivateTmp=yes
 ProtectKernelTunables=yes
 ProtectKernelModules=yes
 ProtectControlGroups=yes
-ReadWritePaths=%h/.config/uncrumpled
+ReadWritePaths=%h/.config/uncrumpled-context-switcher
 
 [Install]
 WantedBy=default.target
