Add global hotkey support and history UI
Integrate system-wide hotkey functionality to toggle the context switcher UI.
Add history panel for viewing recent context switches. Update install scripts
with --update and --dev modes for streamlined development workflow, plus
interactive hotkey selection during installation.

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "modules/jai-toml-c"]
 	path = modules/jai-toml-c
 	url = git@github.com:uncrumpled2/jai-toml-c.git
+[submodule "modules/jai-system-hotkey"]
+	path = modules/jai-system-hotkey
+	url = git@github.com:uncrumpled2/jai-system-hotkey.git
