fix deploy settings on linux for xserver

--- a/deploy/linux/uncrumpled-context-switcher.service
+++ b/deploy/linux/uncrumpled-context-switcher.service
@@ -29,6 +29,7 @@ RestartSec=5
 
 # Socket and state file paths
 Environment=XDG_RUNTIME_DIR=%t
+Environment=DISPLAY=:0
 RuntimeDirectory=uncrumpled-context-switcher
 RuntimeDirectoryMode=0700
 
@@ -40,7 +41,7 @@ MemoryMax=128M
 NoNewPrivileges=yes
 ProtectSystem=strict
 ProtectHome=read-only
-PrivateTmp=yes
+# PrivateTmp=yes  # Disabled: need access to /tmp/.X11-unix for X display
 ProtectKernelTunables=yes
 ProtectKernelModules=yes
 ProtectControlGroups=yes
